# comfy-agent-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
comfy_agent_tools/: __init__.py  downloads.py  loras.py  media.py  profiles.py
comfy_agent_tools/cli/: imagedescribe.py  imagegen.py  media.py  models.py  musicgen.py  videogen.py
comfy_agent_tools/imagedescribe/: __init__.py  config.py  qwen3vl.py
comfy_agent_tools/imagegen/: __init__.py  anima.py  artifacts.py  config.py  flux_klein.py  grok.py  ideogram4.py  krea2.py  krea2_config.py  qwen.py  rtx_upscale.py  runtime.py  upscale.py
comfy_agent_tools/media_static/: gallery.css  gallery.js  hyperframes-player.js
comfy_agent_tools/musicgen/: __init__.py  ace_step.py  artifacts.py  config.py
comfy_agent_tools/videogen/: __init__.py  artifacts.py  config.py  ltx23.py  rtx_upscale.py  seedance2.py  seedvr2_upscale.py  wan22.py
scripts/: update_changelog.py  validate_krea2_rebalance.py
skills/comfy-bernini-videoedit/: SKILL.md
skills/comfy-imagedescribe/: SKILL.md
skills/comfy-imagegen/: SKILL.md
skills/comfy-lora-onboarding/: SKILL.md
skills/comfy-media/: SKILL.md
skills/comfy-model-downloader/: SKILL.md
skills/comfy-model-onboarding/: SKILL.md
skills/comfy-motion-track-control/: SKILL.md
skills/comfy-musicgen/: SKILL.md
skills/comfy-tools-setup/: SKILL.md
skills/comfy-videogen/: SKILL.md
tests/: test_downloads.py  test_imagedescribe_cli.py  test_imagegen_cli.py  test_loras.py  test_media_cli.py  test_models_cli.py  test_musicgen_cli.py  test_profiles.py  test_seedvr2_upscale.py  test_skill_static.py  test_videogen_cli.py  test_wan22_video_audio_runtime.py
