[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-agent-tools"
version = "0.1.0"
description = "Local Codex skills and CLI tools powered by comfy-diffusion."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "alembic>=1.13",
    "comfy-diffusion[comfyui,video,audio] @ git+https://github.com/quinteroac/comfy-diffusion.git@v2.2.0",
    "hf-xet>=1.2",
    "huggingface-hub>=0.36",
    "pillow>=12.0.0",
    "sqlalchemy>=2.0",
    "torchaudio>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
comfy-imagegen = "comfy_agent_tools.cli.imagegen:main"
comfy-videogen = "comfy_agent_tools.cli.videogen:main"
comfy-musicgen = "comfy_agent_tools.cli.musicgen:main"
comfy-models = "comfy_agent_tools.cli.models:main"
comfy-media = "comfy_agent_tools.cli.media:main"

[tool.setuptools.packages.find]
include = ["comfy_agent_tools*"]

[tool.setuptools.package-data]
comfy_agent_tools = ["media_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
