[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-agent-tools"
version = "0.1.0"
description = "Local Codex skills and CLI tools powered by comfy-diffusion."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic>=1.13",
    "av>=16.0.0",
    "blake3",
    "comfy-aimdo==0.4.8",
    "comfy-diffusion[video,audio] @ git+https://github.com/quinteroac/comfy-diffusion.git@v2.4.4",
    "comfy-kitchen==0.2.10",
    "comfyui-embedded-docs==0.5.2",
    "comfyui-frontend-package==1.44.19",
    "comfyui-workflow-templates==0.9.98",
    "einops",
    "filelock",
    "glfw",
    "hf-xet>=1.2",
    "huggingface-hub>=0.36",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=12.0.0",
    "psutil",
    "pydantic-settings~=2.0",
    "pydantic~=2.0",
    "pyopengl",
    "pyyaml",
    "requests",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "simpleeval>=1.0.0",
    "spandrel",
    "sqlalchemy>=2.0",
    "tokenizers>=0.13.3",
    "torch==2.12.0",
    "torchaudio>=2.9.1",
    "torchsde",
    "torchvision==0.27.0",
    "tqdm",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
comfy-imagegen = "comfy_agent_tools.cli.imagegen:main"
comfy-videogen = "comfy_agent_tools.cli.videogen:main"
comfy-musicgen = "comfy_agent_tools.cli.musicgen:main"
comfy-models = "comfy_agent_tools.cli.models:main"
comfy-media = "comfy_agent_tools.cli.media:main"

[tool.setuptools.packages.find]
include = ["comfy_agent_tools*"]

[tool.setuptools.package-data]
comfy_agent_tools = ["media_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
